--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,15 +1,12 @@
-.section {
-  height: 100vh;
+.container {
+  justify-content: center;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
-.container {
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
+.App {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  height: 100vh;
 }
